--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.5",
+    "@gsap/react": "^2.1.0",
+    "@types/aos": "^3.0.7",
+    "antd": "^5.14.1",
+    "aos": "^2.3.4",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.5",
+    "gsap": "^3.12.5",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-fast-marquee": "^1.6.4",
+    "sass": "^1.71.0",
+    "split-type": "^0.3.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
