--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "antd": "^5.14.1",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "embla-carousel": "^8.0.0-rc23",
+    "embla-carousel-autoplay": "^8.0.0-rc23",
+    "embla-carousel-react": "^8.0.0-rc23",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "next": "14.1.0",
