--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.5",
     "@gsap/react": "^2.1.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/aos": "^3.0.7",
     "antd": "^5.14.1",
     "aos": "^2.3.4",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-redux": "^9.1.0",
     "sass": "^1.71.0",
     "split-type": "^0.3.4",
     "yup": "^1.3.3"
