--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.14.1",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "cookies-next": "^4.2.1",
     "embla-carousel": "^8.0.0-rc23",
     "embla-carousel-autoplay": "^8.0.0-rc23",
     "embla-carousel-react": "^8.0.0-rc23",
@@ -24,6 +25,7 @@
     "next": "14.1.0",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
