--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.0",
+    "react-use-measure": "^2.1.1",
     "sass": "^1.71.0",
     "split-type": "^0.3.4",
     "yup": "^1.3.3"
