--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.0.0-rc23",
     "gsap": "^3.12.5",
     "next": "14.1.0",
+    "next-cloudinary": "^6.13.0",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-cookie-consent": "^9.0.0",
